detalhes acerca de como estou a guardar ficheiros: as imagens, zips, documentos sem ser .txt estão a ficar todos corrompidos, apesar de terem exatamente o mesmo número de bytes...os ficheiros .txt, aparentemente, estão iguaizinhos..acho que tem a ver com os metadados das imagens, zips e outros ficheiros...não estou a perceber como é que resolvo isto